// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProfileError /> renders Not Found error type correctly 1`] = `
<Paper
  circle={false}
  className="errorContainer"
  rounded={true}
  transitionEnabled={true}
  zDepth={2}
>
  <h3>
    Oh no! We couldn't find that user!
  </h3>
  <p>
    Please update your search and try again.
  </p>
</Paper>
`;

exports[`<ProfileError /> renders Rate Limit error type correctly 1`] = `
<Paper
  circle={false}
  className="errorContainer"
  rounded={true}
  transitionEnabled={true}
  zDepth={2}
>
  <h3>
    Oh no! We've been rate limited!
  </h3>
  <p>
    Please try again in a few minutes.
  </p>
</Paper>
`;

exports[`<ProfileError /> renders the default error type correctly 1`] = `
<Paper
  circle={false}
  className="errorContainer"
  rounded={true}
  transitionEnabled={true}
  zDepth={2}
>
  <h3>
    An error occurred!
  </h3>
  <p />
</Paper>
`;
